--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: npm install
       - run:
           name: Build
-          command: npm run build
+          command: npm build
 
   deploy:
     docker:
