--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
           command: |
             ssh -oStrictHostKeyChecking=no -v $USER@$DNS "\
             cd /home/ubuntu/sangam && \
-            mkdir mali"
+            mkdir -p mali && \
+            cp -r /path/to/your/project/build/* /home/ubuntu/sangam/mali/"
 
 workflows:
   deploy-to-ec2:
