--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,19 @@
 version: 2.1
 
-orbs:
-  aws-cli: circleci/aws-cli@1.3.1
-
 jobs:
-  build_and_deploy:
+  build:
     docker:
       - image: circleci/node
-    working_directory: ~/repo
     steps:
       - checkout
       - run:
           name: Install Dependencies
-          command: npm install --legacy-peer-deps
+          command: npm install
       - run:
           name: Build
           command: npm run build
-
-  deploy:
-    docker:
-      - image: arvindr226/alpine-ssh
-    steps:
       - run:
-          name: Deploy to EC2
+          name: Check Build Directory
           command: |
-            ssh -oStrictHostKeyChecking=no -v $USER@$DNS "\
-            cd /home/ubuntu/sangam && \
-            mkdir -p mali && \
-            cp -r /path/to/your/project/build/* /home/ubuntu/sangam/mali/"
-
-workflows:
-  deploy-to-ec2:
-    jobs:
-      - build_and_deploy
-      - deploy:
-          requires:
-            - build_and_deploy
+            ls -l $PWD
+            pwd
