--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,7 @@ jobs:
           name: Deploy to EC2
           command: |
             ssh -oStrictHostKeyChecking=no -v $USER@$DNS "\
-            cd /home/ubuntu/sangam && \
-            mkdir -p mali && \
-            cp -r build/* /home/ubuntu/sangam/mali/"
+            cp -r /home/circleci/project/build/* /home/ubuntu/sangam/ "
 
 workflows:
   deploy-to-ec2:
