--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           name: Deploy to EC2
           command: |
             ssh -oStrictHostKeyChecking=no -v $USER@$DNS "\
-            cp -r /home/circleci/project/build/* /home/ubuntu/sangam/ "
+            cp -r * /home/ubuntu/sangam/ "
 
 workflows:
   deploy-to-ec2:
