--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,12 +19,11 @@ jobs:
       - run:
           name: SSH into the instance and deploy
           command: |
-            ssh $USER@$DNS 'cd /home/ubuntu/sangam/build && rm -rf *'
+            ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/sangam/build && rm -rf *'
             scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/sangam/build
-            ssh $USER@$DNS 'pm2 restart 0'
+            ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
 
 workflows:
   deploy-to-ec2:
     jobs:
       - build_and_deploy
-
