--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@1.3.1
+  aws-cli: circleci/aws-cli@2.0.0
 
 jobs:
   build_and_deploy:
     docker:
-      - image: circleci/node
+      - image: circleci/node:14.17.0
     working_directory: ~/repo
     steps:
       - checkout
