--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,14 @@ jobs:
             ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/sangam && git pull origin main && cd build && rm -rf *'
             scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/sangam/build
 
-  hold:
-    type: approval
-    requires:
-      - build_and_deploy
-
 workflows:
   deploy-to-ec2:
     jobs:
       - build_and_deploy
-      - hold
+      - hold:
+          type: approval
+          requires:
+            - build_and_deploy
+      - deploy:
+          requires:
+            - hold
