--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,24 @@ jobs:
             ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/sangam && git pull origin main && cd build && rm -rf *'
             scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/sangam/build
 
+  hold:
+    type: approval
+    requires:
+      - build_and_deploy
+
+  deploy:
+    docker:
+      - image: cimg/base:2020.01
+    steps:
+      - run:
+          name: Deployment
+          command: echo "Deploying to EC2"
+
 workflows:
   deploy-to-ec2:
     jobs:
       - build_and_deploy
-      - hold:
-          type: approval
-          requires:
-            - build_and_deploy
+      - hold
       - deploy:
           requires:
             - hold
