--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,13 @@
 version: 2.1
 
+orbs:
+  aws-cli: circleci/aws-cli@2.0.0
+
 jobs:
-  build_and_deploy:
+  build\_and\_deploy:
     docker:
       - image: circleci/node:14.17.0
-    working_directory: ~/repo
+    working\_directory: ~/repo
     steps:
       - checkout
       - run:
@@ -16,27 +19,22 @@ jobs:
       - run:
           name: SSH into the instance and deploy
           command: |
-            ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/sangam && git pull origin main && cd build && rm -rf *'
-            scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/sangam/build
+            ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/sangam && git pull origin main && cd build && rm -rf \*'
+            scp -r -o StrictHostKeyChecking=no build/\* $USER@$DNS:/home/ubuntu/sangam/build
 
-  hold:
+  manual\_approval:
     type: approval
     requires:
-      - build_and_deploy
-
-  deploy:
-    docker:
-      - image: cimg/base:2020.01
-    steps:
-      - run:
-          name: Deployment
-          command: echo "Deploying to EC2"
+      - build\_and\_deploy
+    filters:
+      branches:
+        only: main
 
 workflows:
   deploy-to-ec2:
     jobs:
-      - build_and_deploy
-      - hold
-      - deploy:
-          requires:
-            - hold
+      - build\_and\_deploy:
+          filters:
+            branches:
+              only: main
+      - manual\_approval
