--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
       - run:
           name: Manual Approval
           command: echo "Manual approval required"
+      - hold:  # Placeholder for the timeout
+          type: approval
+          author: "Approval Timeout"
+          duration: 20s  # Timeout duration, adjust as needed
 
   build_and_deploy:
     docker:
