--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,6 @@ jobs:
       - image: circleci/node:14.17.0
     working_directory: ~/repo
     steps:
-      - checkout
       - attach_workspace:
           at: ~/repo
       - run:
@@ -45,7 +44,7 @@ jobs:
 workflows:
   deploy-to-ec2:
     jobs:
-      - hold:
+      - hold
       - build_and_deploy:
           requires:
             - hold
