--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,6 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.0
 
 jobs:
-  hold:
-    docker:
-      - image: circleci/node:14.17.0
-    steps:
-      - run:
-          name: Manual Approval
-          command: echo "Manual approval required"
-
   build_and_deploy:
     docker:
       - image: circleci/node:14.17.0
@@ -36,8 +28,8 @@ jobs:
 workflows:
   deploy-to-ec2:
     jobs:
-      - hold:
-          type: approval
       - build_and_deploy:
-          requires:
-            - hold
+          filters:
+            branches:
+              only:
+                - main
