--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,8 @@ orbs:
 
 workflows:
   manual-deploy:
-    run: false
     jobs:
-      - build_and_deploy: # Start of the first job definition
+      - build_and_deploy:
           docker:
             - image: circleci/node:14.17.0
           working_directory: ~/repo
@@ -27,4 +26,3 @@ workflows:
                   ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
                   scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
                   ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
-      # Add more jobs here if needed
