--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,8 @@ workflows:
   deploy-to-ec2:
     jobs:
       - build_and_deploy:
-          type: manual
+          type: approval
+        triggers:
+          - run-on-demand:
+              when: on_demand
+
