--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,4 @@ workflows:
   deploy-to-ec2:
     jobs:
       - build_and_deploy:
-          type: approval
-        triggers:
-          - run-on-demand:
-              when: on_demand
-
+          type: manual
