--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,9 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.0
 
 workflows:
-  buidl-deploy:
+  # Replace with your desired workflow name (lowercase recommended)
+  build-and-deploy:
+    # Set the workflow to run manually
     run: false
 
     jobs:
@@ -28,3 +30,7 @@ workflows:
                 ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
                 scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
                 ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
+
+# **Caution: Consider security improvements!**
+# - Implement proper SSH key authentication.
+# - Store sensitive information securely using environment variables.
