--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
               name: Build
               command: npm run build
           - run:
-              name: SSH into the instance and deploy (**Caution: Consider security improvements!**)
+              name: SSH into the instance and deploy
               command: |
                 ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
                 scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
