--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,40 +3,35 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@2.0.0
 
-workflows:
+
+jobs:
+  build_and_deploy:
+    docker:
+      - image: circleci/node:14.17.0
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Install Dependencies
+          command: npm install --legacy-peer-deps
+      - run:
+          name: Build
+          command: npm run build
+      - run:
+          name: SSH into the instance and deploy
+          command: |
+            ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
+            scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
+            ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
+            
+ workflows:
   # Replace with your desired workflow name (lowercase recommended)
   build-and-deploy:
     # Trigger the workflow only on pushes to the "test" branch
-    filters:
-      branches:
-        only: test
-
-    # Set the workflow to run manually (optional)
-    # run: false
-
     jobs:
-      - # Use a sequence here
-        build_and_deploy:
-          docker:
-            - image: circleci/node:14.17.0
-          working_directory: ~/repo
-          steps:
-            - checkout
-            - attach_workspace:
-                at: ~/repo
-            - run:
-                name: Install Dependencies
-                command: npm install --legacy-peer-deps
-            - run:
-                name: Build
-                command: npm run build
-            - run:
-                name: SSH into the instance and deploy
-                command: |
-                  ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
-                  scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
-                  ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
-
-# **Caution: Consider security improvements!**
-# - Implement proper SSH key authentication.
-# - Store sensitive information securely using environment variables.
+      - build_and_deploy:
+          filters:
+            branches:
+              only: test
