--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 workflows:
   # Replace with your desired workflow name (lowercase recommended)
   build-and-deploy:
-    # Trigger the workflow only on pushes to the "test" branch
+    # This workflow is not triggered automatically
     jobs:
       - build_and_deploy:
           filters:
