--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,18 @@
 version: 2.1
 
 orbs:
-  aws-cli: circleci/aws-cli@2.0.0
-
-workflows:
-  # Replace with your desired workflow name (lowercase recommended)
-  build-and-deploy:
-    # This workflow is not triggered automatically
-    jobs:
-      - build_and_deploy:
-          filters:
-            branches:
-              only: test
+  aws-cli: circleci/aws-cli@1.3.1
 
 jobs:
   build_and_deploy:
     docker:
-      - image: circleci/node:14.17.0
+      - image: circleci/node
     working_directory: ~/repo
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/repo
       - run:
           name: Install Dependencies
           command: npm install --legacy-peer-deps
       - run:
           name: Build
           command: npm run build
-      - run:
-          name: SSH into the instance and deploy
-          command: |
-            ssh -o StrictHostKeyChecking=no $USER@$DNS 'cd /home/ubuntu/funds-up/funds-up-portal && cd build && rm -rf *'
-            scp -r -o StrictHostKeyChecking=no build/* $USER@$DNS:/home/ubuntu/funds-up/funds-up-portal/build
-            ssh -o StrictHostKeyChecking=no $USER@$DNS 'pm2 restart 0'
