--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,6 @@ jobs:
   build_and_deploy:
     docker:
       - image: circleci/node
-    working_directory: ~/repo
     steps:
       - checkout
       - run:
@@ -16,7 +15,9 @@ jobs:
       - run:
           name: Build
           command: npm run build
-  workflows:
-  my-workflow:
+
+workflows:
+  version: 2
+  build_and_deploy:
     jobs:
       - build_and_deploy
