--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,16 @@
 version: 2.1
 
-orbs:
-  aws-cli: circleci/aws-cli@1.3.1
+workflows:
+  build_and_deploy:
+    jobs:
+      - build_and_deploy:
+          filters:
+            branches:
+              only:
+                - main
+            sources:
+              only:
+                - web
 
 jobs:
   build_and_deploy:
@@ -15,10 +24,4 @@ jobs:
       - run:
           name: Build
           command: npm run build
-
-workflows:
-  build_and_deploy:
-    jobs:
-      - build_and_deploy:
-          filters:
 
