--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - master
             sources:
               only:
                 - web
