--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ workflows:
           filters:
             branches:
               only:
-                - master
-            sources:
+                - main
+            tags:
               only:
                 - web
 
@@ -24,4 +24,3 @@ jobs:
       - run:
           name: Build
           command: npm run build
-
