--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,16 @@
 version: 2.1
 
 workflows:
-  version: 2
   build_and_deploy:
     jobs:
       - build_and_deploy:
           filters:
             branches:
-              ignore:
-                - '*'
+              ignore: 
+                - main
+            tags:
+              only:
+                - web
 
 jobs:
   build_and_deploy:
