--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,18 @@
 version: 2.1
 
 workflows:
-  build_and_deploy:
+  version: 2
+  build:
     jobs:
-      - build_and_deploy:
+      - build-and-test:
           filters:
             branches:
-              ignore:
-                - '*'
-            tags:
-              only:
-                - web
+              ignore: /.*/
 
 jobs:
-  build_and_deploy:
+  build-and-test:
     docker:
-      - image: circleci/node
+      - image: circleci/python:3.9
     steps:
       - checkout
-      - run:
-          name: Install Dependencies
-          command: npm install --legacy-peer-deps
-      - run:
-          name: Build
-          command: npm run build
+      # Add your build and test steps here
