--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,12 @@
 version: 2.1
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - build-and-test:
-          filters:
-            branches:
-              ignore: /.*/
-
 jobs:
-  build-and-test:
-    docker:
-      - image: circleci/python:3.9
+  deploy:
+    machine:
+      image: ubuntu-2204:current
     steps:
-      - checkout
-      # Add your build and test steps here
+      - run: echo 'Deploying...'
+workflows:
+  deploy:
+    when: { equal: [ api, << pipeline.trigger_source >> ] }
+    jobs:
+      - deploy
